<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="app_name">ZeroStudio-ComposePreview</string>
     <string name="analyzing">Analyzing...</string>
    <string name="no_preview_found_message">"No preview found.
Add preview by annotating Composables with @Preview.
Note: syntax errors could cause existing previews not to be found."</string>

     
     
     <string name="androidx_compose_foundation_autofill">Autofill</string>
     <string name="androidx_compose_ui_autofill">Autofill</string>
     <string name="androidx_startup">androidx.startup</string>
     <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
     <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
     <string name="biometric_prompt_message">Use your biometric to continue</string>
     <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
     <string name="bottomsheet_action_collapse">Collapse</string>
     <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
     <string name="bottomsheet_action_expand">Expand</string>
     <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
     <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
     <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
     <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
     <string name="bottomsheet_state_collapsed">Collapsed</string>
     <string name="bottomsheet_state_expanded">Expanded</string>
     <string name="bottomsheet_state_half_expanded">Half expanded</string>
     <string name="call_notification_answer_action">Answer</string>
     <string name="call_notification_answer_video_action">Video</string>
     <string name="call_notification_decline_action">Decline</string>
     <string name="call_notification_hang_up_action">Hang Up</string>
     <string name="call_notification_incoming_text">Incoming call</string>
     <string name="call_notification_ongoing_text">Ongoing call</string>
     <string name="call_notification_screening_text">Screening an incoming call</string>
     <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
     <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
     <string name="character_counter_pattern">%1$d/%2$d</string>
     <string name="clear_text_end_icon_content_description">Clear text</string>
     <string name="close_drawer">Close navigation menu</string>
     <string name="close_sheet">Close sheet</string>
     <string name="code">Code</string>
     <string name="confirm_device_credential_password">Use password</string>
     <string name="content_view_more_options_button_clicked">More options button in the content view is clicked.</string>
     <string name="copy">Copy</string>
     <string name="dark">Dark</string>
     <string name="default_error_message">Invalid input</string>
     <string name="default_error_msg">Unknown error</string>
     <string name="default_popup_window_title">Pop-Up Window</string>
     <string name="design">Design</string>
     <string name="dropdown_menu">Dropdown menu</string>
     <string name="error_a11y_label">Error: invalid</string>
     <string name="error_icon_content_description">Error</string>
     <string name="expand_button_title">Advanced</string>
     <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
     <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
     <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
     <string name="face_or_screen_lock_prompt_message">Use your face or screen lock to continue</string>
     <string name="face_prompt_message">Use your face to continue</string>
     <string name="fingerprint_dialog_activity_label">Fingerprint Authentication Dialog</string>
     <string name="fingerprint_dialog_icon_description">Fingerprint icon</string>
     <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
     <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
     <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
     <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
     <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
     <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
     <string name="fingerprint_not_recognized">Not recognized</string>
     <string name="fingerprint_or_screen_lock_prompt_message">Use your fingerprint or screen lock to continue</string>
     <string name="fingerprint_prompt_message">Use your fingerprint to continue</string>
     <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
     <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
     <string name="generic_error_user_canceled">Authentication canceled by user.</string>
     <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
     <string name="icon_content_description">Dialog Icon</string>
     <string name="in_progress">In progress</string>
     <string name="indeterminate">Partially checked</string>
     <string name="initializing">Initializing...</string>
     <string name="item_view_role_description">Tab</string>
     <string name="light">Light</string>
     <string name="loading">Loading...</string>
     <string name="split">Split</string>
     <string name="multiple_previews_not_supported">"Multiple previews are not supported.
You can only preview one @Preview at a time."</string>
     <string name="state_empty">Empty</string>
     <string name="state_off">Off</string>
     <string name="state_on">On</string>
     <string name="status_bar_notification_info_overflow">999+</string>
     <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
     <string name="switch_role">Switch</string>
     <string name="system_default">System default</string>
     <string name="tab">Tab</string>
     <string name="template_percent">%1$d percent.</string>
     <string name="tooltip_description">tooltip</string>
     <string name="tooltip_label">show tooltip</string>
</resources>