<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:paddingLeft="3.0dip"
                android:paddingRight="6.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/TextAppearance.App.TitleSmallMedium"
                app:titleTextColor="@color/md_theme_textColorControlNormal" />
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editor_bottom_sheet"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:behavior_hideable="false"
                style="@style/Widget.AppTheme.BottomSheet">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/app_bar_editor"
                        android:background="?colorSurfaceContainerLow"
                        android:layout_width="fill_parent"
                        android:layout_height="48.0dip"
                        android:layout_marginHorizontal="16.0dip"
                        android:layout_marginVertical="3.0dip">
                        <com.google.android.material.appbar.MaterialToolbar
                            android:id="@+id/tool_bar_editor"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            app:titleTextAppearance="@style/TextAppearance.App.TitleMediumSmall"
                            app:titleTextColor="@color/md_theme_textColorControlNormal">
                            <LinearLayout
                                android:gravity="center"
                                android:layout_gravity="right"
                                android:orientation="vertical"
                                android:id="@+id/top_right_linear_layout"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <com.google.android.material.bottomnavigation.BottomNavigationView
                                    android:id="@+id/top_right_nav_view"
                                    android:layout_width="124.0dip"
                                    android:layout_height="wrap_content"
                                    app:backgroundTint="?colorSurfaceContainerLow"
                                    app:itemIconTint="@color/icon_color"
                                    app:labelVisibilityMode="unlabeled"
                                    app:menu="@menu/editor_top_right_navigation" />
                            </LinearLayout>
                        </com.google.android.material.appbar.MaterialToolbar>
                    </com.google.android.material.appbar.AppBarLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/editor_preview_container"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                        <LinearLayout
                            android:orientation="vertical"
                            android:id="@+id/editor_preview_linear_layout"
                            android:layout_width="0.0dip"
                            android:layout_height="0.0dip"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/linear_layout_compose_preview"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="1.0">
                            <android.zero.studio.compose.preview.editor.CodeEditorView
                                android:id="@+id/code_editor"
                                android:layout_width="fill_parent"
                                android:layout_height="0.0dip"
                                android:layout_weight="1.0" />
                            <HorizontalScrollView
                                android:id="@+id/editor_input_view"
                                android:scrollbars="none"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:fillViewport="true"
                                android:overScrollMode="never">
                                <android.zero.studio.compose.preview.editor.symbol.SymbolInputView
                                    android:id="@+id/symbol_input_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </HorizontalScrollView>
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:id="@+id/linear_layout_analyze"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toStartOf="@+id/linear_layout_container_preview"
                            app:layout_constraintTop_toTopOf="parent">
                            <com.google.android.material.button.MaterialButton
                                android:textAppearance="@style/TextAppearance.App.TitleLargeSmall"
                                android:textColor="@color/md_theme_textColorControlNormal"
                                android:id="@+id/text_button_analyzing"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4.0dip"
                                android:minWidth="0.0dip"
                                android:minHeight="0.0dip"
                                android:text="@string/analyzing"
                                android:insetLeft="0.0dip"
                                android:insetRight="0.0dip"
                                android:insetTop="0.0dip"
                                android:insetBottom="0.0dip"
                                android:paddingHorizontal="6.0dip"
                                android:paddingVertical="4.0dip"
                                app:cornerRadius="8.0dip"
                                style="@style/Widget.Material3.Button.TextButton" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:id="@+id/linear_layout_container_preview"
                            android:layout_width="0.0dip"
                            android:layout_height="0.0dip"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/editor_preview_linear_layout"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="0.0">
                            <LinearLayout
                                android:gravity="end|center"
                                android:orientation="horizontal"
                                android:id="@+id/linear_layout_loading"
                                android:visibility="gone"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="4.0dip"
                                android:paddingVertical="4.0dip">
                                <com.google.android.material.progressindicator.CircularProgressIndicator
                                    android:id="@+id/circular_progress_indicator_loading"
                                    android:layout_width="16.0dip"
                                    android:layout_height="16.0dip"
                                    android:indeterminate="true"
                                    app:indicatorSize="16.0dip"
                                    app:trackThickness="2.0dip" />
                                <com.google.android.material.textview.MaterialTextView
                                    android:textAppearance="@style/TextAppearance.App.TitleLargeSmall"
                                    android:textColor="@color/md_theme_textColorControlNormal"
                                    android:id="@+id/text_view_loading"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="6.0dip"
                                    android:text="@string/loading"
                                    android:paddingVertical="2.0dip" />
                            </LinearLayout>
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/linear_layout_initializing"
                                android:visibility="gone"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent">
                                <com.google.android.material.progressindicator.CircularProgressIndicator
                                    android:id="@+id/circular_progress_indicator_initializing"
                                    android:layout_width="20.0dip"
                                    android:layout_height="20.0dip"
                                    android:indeterminate="true"
                                    app:indicatorSize="20.0dip"
                                    app:trackThickness="2.0dip" />
                                <com.google.android.material.textview.MaterialTextView
                                    android:textAppearance="@style/TextAppearance.App.TitleLargeSmall"
                                    android:textColor="@color/md_theme_textColorControlNormal"
                                    android:id="@+id/text_view_initializing"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="6.0dip"
                                    android:text="@string/initializing" />
                            </LinearLayout>
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/linear_layout_no_preview"
                                android:visibility="gone"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent">
                                <com.google.android.material.textview.MaterialTextView
                                    android:textAppearance="@style/TextAppearance.App.TitleLargeSmall"
                                    android:textSize="6.0sp"
                                    android:textColor="@color/md_theme_textColorControlNormal"
                                    android:gravity="center"
                                    android:id="@+id/text_view_no_preview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/no_preview_found_message" />
                            </LinearLayout>
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/linear_layout_multiple_preview"
                                android:visibility="gone"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent">
                                <com.google.android.material.textview.MaterialTextView
                                    android:textAppearance="@style/TextAppearance.App.TitleLargeSmall"
                                    android:textSize="6.0sp"
                                    android:textColor="@color/md_theme_textColorControlNormal"
                                    android:gravity="center"
                                    android:id="@+id/text_view_multiple_preview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/multiple_previews_not_supported" />
                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/linear_layout_compose_preview"
                                android:visibility="gone"
                                android:layout_width="fill_parent"
                                android:layout_height="0.0dip"
                                android:layout_weight="1.0">
                                <androidx.compose.ui.platform.ComposeView
                                    android:id="@+id/compose_view"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>